--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@900&display=swap');
 
     @font-face {
         font-family: 'Grobold';
@@ -174,3 +172,45 @@
         from{opacity: 100%;}
         to{opacity: 0%;}
     }
+
+    .bouton{
+        display: block;
+        border-radius: 30px;
+        font-family: 'Grobold';
+        font-size: 0.8em;
+        padding: 0.2em;
+        background-color: white;
+        border: 3px solid black;
+        box-shadow: 4px 4px 4px black;
+        transition: 200ms ease;
+        
+        height: fit-content;
+    }
+
+    .bouton:hover{
+        user-select: none;
+        cursor: pointer;
+        border: 3px solid rgb(49, 49, 49);
+        color: gray;
+        box-shadow: 2px 2px 2px gray;
+        -webkit-user-drag: none;
+    }
+
+    .bouton:active{
+        background-color: white;
+        border: 3px solid black;
+        color: gray;
+        box-shadow: inset 2px 2px 2px 2px black;
+    }
+
+    .bouton.links{
+        font-size: 0.5em;
+        padding: 0.2em;
+        height: fit-content;
+        margin-top: 0.5em;
+    }
+
+    .bouton.links:active{
+        color:rgb(20, 167, 64);;
+    }
+
